@@ -5,10 +5,12 @@ import java.io.IOException;
 import java.io.InputStreamReader;
 import java.math.BigDecimal;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.stream.Collectors;
 
 import com.example.hellospring.payment.ExRateProvider;
+import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 
 // import org.springframework.stereotype.Component;
@@ -19,18 +21,32 @@ public class WebApiExRateProvider implements ExRateProvider {
     private static final String EXCHANGE_RATE_URL = "https://open.er-api.com/v6/latest/";
 
     @Override
-    public BigDecimal getExchangeRate(final String currency) throws IOException {
-        URL url = new URL(EXCHANGE_RATE_URL + currency);
-        HttpURLConnection connection = (HttpURLConnection) url.openConnection();
-        BufferedReader br = new BufferedReader(new InputStreamReader(connection.getInputStream()));
-        String response = br.lines().collect(Collectors.joining());
-        br.close();
+    public BigDecimal getExchangeRate(final String currency) {
+        URI uri;
+        try {
+            uri = new URI(EXCHANGE_RATE_URL + currency);
+        } catch (URISyntaxException e) {
+            throw new RuntimeException(e);
+        }
+
+        String response;
+        try {
+            HttpURLConnection connection = (HttpURLConnection) uri.toURL().openConnection();
+            try (BufferedReader br = new BufferedReader(new InputStreamReader(connection.getInputStream()))) {
+                response = br.lines().collect(Collectors.joining());
+            }
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
 
         ObjectMapper mapper = new ObjectMapper();
-        ExRateData data = mapper.readValue(response, ExRateData.class);
-
-        System.out.println("API ExRate: " + data.rates().get("KRW"));
-        return data.rates().get("KRW");
+        ExRateData data;
+        try {
+            data = mapper.readValue(response, ExRateData.class);
+            return data.rates().get("KRW");
+        } catch (JsonProcessingException e) {
+            throw new RuntimeException(e);
+        }
     }
 
 }
